# lii

./: .gitignore  AGENTS.md  next.config.ts  package-lock.json  package.json
.agents/skills/: gstack-autoplan  gstack-benchmark  gstack-browse  gstack-canary  gstack-careful  gstack-cso  gstack-design-consultation  gstack-design-review  gstack-document-release  gstack-freeze  gstack-guard  gstack-investigate  gstack-land-and-deploy  gstack-office-hours  gstack-plan-ceo-review  gstack-plan-design-review  gstack-plan-eng-review  gstack-qa  gstack-qa-only  gstack-retro  gstack-review  gstack-setup-browser-cookies  gstack-setup-deploy  gstack-ship  gstack-unfreeze  gstack-upgrade
.claude/: launch.json
.github/workflows/: release.yml
public/: manifest.json  sw.js
scripts/: tauri-build.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/: AuthGate.tsx  ChatInput.tsx  ChatMessageBubble.tsx  ContactDetectionBanner.tsx  ContactSelector.tsx  ConversationSidebar.tsx  EmptyState.tsx  Navbar.tsx  ProviderSelector.tsx  PwaRegistration.tsx  ReplyComposer.tsx  ResponseSuggestions.tsx  SelectionSpeechToolbar.tsx  ThemeProvider.tsx  Toast.tsx  ToneIndicator.tsx  TranslateInput.tsx  TranslationResult.tsx  TranslationSkeleton.tsx  UpdateBanner.tsx
src/hooks/: useAuth.ts  useChatMessages.ts  useContacts.ts  useConversations.ts  useHistory.ts  useSettings.ts  useSlack.ts
src/lib/: auth.ts  slack.ts  (+13 more)
(+45 files in other folders)
